# PekaDaily

./: .gitignore  README.md
Back/Cockroach/: Dockerfile
Back/Jobs/: Dockerfile  Jobs.sln
Back/Jobs/Jobs/: Jobs.csproj  Program.cs  Startup.cs
Back/Jobs/Jobs/Cockroach/: CockroachPekaRepository.cs
Back/Jobs/Jobs/Controllers/: StatusController.cs
Back/Jobs/Jobs/FCM/: FcmSender.cs
Back/Jobs/Jobs/Jobs/: DailyPekaJob.cs
Back/Jobs/Jobs/Models/: Counter.cs  MongoEntity.cs  Peka.cs
Back/Jobs/Jobs/Mongo/: CounterRepository.cs  MongoContext.cs  PekaRepository.cs
Back/api/: Cargo.toml  Dockerfile
Back/api/src/: main.rs
Front/: README.md  pubspec.yaml
Front/android/app/: build.gradle  google-services.json
Front/android/app/src/debug/: AndroidManifest.xml
Front/android/app/src/main/: AndroidManifest.xml
Front/android/app/src/main/java/com/example/peka/: MainActivity.java
Front/cockroach-data/: IDENTITY  OPTIONS-000005  cockroach.advertise-addr  cockroach.http-addr
Front/ios/Runner.xcodeproj/: project.pbxproj
Front/lib/: main.dart
