[package]
name = "api"
version = "0.2.0"
authors = ["itrofimow <i.trofimow@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0-alpha.3"
actix-rt = "1.0.0-alpha.3"
mobc-postgres = "0.3.1"
mobc = "0.3.1"
tokio = { version = "0.2", features = ["full"] }
tokio-postgres = "0.5.0-alpha.2"
